# amplifier-app-tui

./: .gitignore  README.md  diagnose.py  pyproject.toml  test_minimal.py
docs/design/: completion-popup-spec.md
src/amplifier_app_tui/: __init__.py  app.py  bridge.py  cli.py  commands.py  completions.py  suggester.py
src/amplifier_app_tui/core/: __init__.py  event_bridge.py  runtime_manager.py
src/amplifier_app_tui/processors/: __init__.py  agent.py  approval.py  base.py  content.py  router.py  session.py  todo.py  tool.py
src/amplifier_app_tui/styles/: __init__.py  amplifier.tcss
src/amplifier_app_tui/ui/: __init__.py  app.py
src/amplifier_app_tui/widgets/: __init__.py  activity.py  approval.py  header.py  input.py  output.py  status.py  suggestions.py  todos.py
tests/: __init__.py  test_app.py  test_processors.py  test_processors_integration.py
