[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "amplifier-app-tui"
version = "0.1.0"
description = "Terminal User Interface for Amplifier Runtime"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "colombod" }
]
keywords = ["amplifier", "tui", "textual", "ai", "agent"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: User Interfaces",
]

dependencies = [
    "textual>=0.47.0",
    "rich>=13.0.0",
    "textual-autocomplete>=3.0.0a0",
    "amplifier-app-runtime",
]

[tool.uv.sources]
amplifier-app-runtime = { path = "../amplifier-app-runtime", editable = true }

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "ruff>=0.1.0",
    "pyright>=1.1.0",
]

[project.scripts]
amplifier-tui = "amplifier_app_tui.cli:main"

[project.urls]
Homepage = "https://github.com/colombod/amplifier-app-tui"
Repository = "https://github.com/colombod/amplifier-app-tui"

[tool.hatch.build.targets.wheel]
packages = ["src/amplifier_app_tui"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "C4", "UP"]
ignore = ["E501"]

[tool.pyright]
pythonVersion = "3.11"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
extraPaths = ["../amplifier-app-runtime/src"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
